--- a/MVCWebApp/Views/TableStorages/Index.cshtml
+++ b/MVCWebApp/Views/TableStorages/Index.cshtml
@@ -5,36 +5,36 @@
 }
 @model Product
 <h2>Add Product</h2>
-<form class="form-inline" asp-action=@(ViewBag.isUpdate ? "Update" : "Create") method="post" enctype="application/x-www-form-urlencoded"> 
-  <input class="form-control mr-1" asp-for="Name" placeholder="Product Name"/>
+<form class="form-inline" asp-action=@(ViewBag.isUpdate ? "Update" : "Create") method="post" enctype="application/x-www-form-urlencoded">
+    <input class="form-control mr-1" asp-for="Name" placeholder="Product Name" />
     <input class="form-control mr-1" asp-for="Price" placeholder="Product Price" />
     <input class="form-control mr-1" asp-for="Stock" placeholder="Product Stock" />
     <input class="form-control mr-1" asp-for="Color" placeholder="Product Color" />
 
-    <input type ="hidden" asp-for="RowKey"/>
-    <input type="hidden" asp-for="PartitionKey"/>
+    <input type="hidden" asp-for="RowKey" />
+    <input type="hidden" asp-for="PartitionKey" />
     <input type="hidden" asp-for="ETag" />
 
-   <input class="btn btn-primary" type="submit" value="@(ViewBag.isUpdate ? "Update" : "Save")"/>
+    <input class="btn btn-primary" type="submit" value="@(ViewBag.isUpdate ? "Update" : "Save")" />
 </form>
 
 <h1>Products</h1>
 <table class="table table-bordered">
-  <tr>
-    <th>RowKey</th>
-    <th>PartitionKey</th>
-    <th>Name</th>
-    <th>Price</th>
-    <th>Stock</th>
-    <th>Color</th>
-    <th>TimeStamp</th>
-    <th>Actions</th>
-    
-  </tr>
+    <tr>
+        <th>RowKey</th>
+        <th>PartitionKey</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Stock</th>
+        <th>Color</th>
+        <th>TimeStamp</th>
+        <th>Actions</th>
 
-@foreach (var item in ViewBag.products as List<Product>)
-{
-          <tr>
+    </tr>
+
+    @foreach (var item in ViewBag.products as List<Product>)
+    {
+        <tr>
             <td>@item.RowKey</td>
             <td>@item.PartitionKey</td>
             <td>@item.Name</td>
@@ -44,8 +44,9 @@
             <td>@item.Timestamp</td>
             <td>
                 <a class="btn btn-primary" asp-action="Update" asp-controller="TableStorages" asp-route-rowKey="@item.RowKey" asp-route-partitionKey="@item.PartitionKey"> Update</a>
+                <a class="btn btn-primary" asp-action="Delete" asp-controller="TableStorages" asp-route-rowKey="@item.RowKey" asp-route-partitionKey="@item.PartitionKey"> Delete</a>
             </td>
-          </tr>
-    
-}
+        </tr>
+
+    }
 </table>
