Adding Delete method to controller.

--- a/MVCWebApp/Views/Blobs/Index.cshtml
+++ b/MVCWebApp/Views/Blobs/Index.cshtml
@@ -25,6 +25,7 @@
             <td>@item.Name</td>
             <td>
               <a class="btn btn-light" asp-action="Download" asp-route-fileName="@item.Name">Download</a>
+                <a class="btn btn-danger" asp-action="Delete" asp-route-fileName="@item.Name">Delete</a>
             </td>
         </tr>
     }
